recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:6: error: '<-' expected but ')' found.
  for (i>1 to 100){
                 ^FourSquare:9: error: illegal start of simple expression
} 
^